--- a/wmoAnalysis.Rmd
+++ b/wmoAnalysis.Rmd
@@ -1,12 +1,15 @@
 ---
 title: "WMO Analysis"
 author: "Theodros H."
-date: "3/6/2019"
-output: pdf_document
+date: "8/6/2022"
+output: 
+  html_document:
+    code_folding: hide
+    toc: true
 editor_options: 
   chunk_output_type: console
 ---
-#EXCLUDED 625
+
 WMO Analysis
 There are 8 blocks of set size 3 trials and 6 blocks of set size 6 trials per participant for a total of 14 blocks
 ```{r}
@@ -16,6 +19,11 @@ library(matlab)
 library(tidyverse)
 library(ggpubr)
 library(magrittr)
+knitr::opts_chunk$set(
+  comment = FALSE, echo = FALSE, warning = FALSE, 
+  message = FALSE 
+ )
+
 ```
 Import data and set variables
 ```{r}
@@ -28,6 +36,8 @@ wmodata <- read_delim('./processed_wmo/wmo_subjects_across_studies_learn_031820.
 wmotestdata<- read_delim('./processed_wmo/wmo_subjects_across_studies_test_031820.csv') 
 model.dat <- read_csv('RMSE_fit_model_dat_07_2022.csv')
 model.dat %<>% mutate(subject=subjects,.keep='unused') 
+load('image_naming_outcomes.RData')
+
 #wmodata <- read.csv('./Processed/wmo_trainingAllParticipants.txt') 
 Training.blocks <- c(3,6,3,3,6,3,6,6,3,3,6,3,6,3) #from data
 
@@ -63,17 +73,29 @@ Subjects <- unique(wmodata$subject)
  - seq is image identifier
  - Code is correct response
  
-```{r block analysis}
+```{r block analysis, fig.height=6, fig.width=14}
 blk.order=c(1,9,2,3,10,4,11,12,5,6,13,7,14,8)
 
 wmo.mod <- 
   wmodata %>% 
   mutate('block' =  rep(
-    c(rep('s3_1_utensils', 13*3), rep('s6_1_colors', 13*6),rep('s3_2_sports', 13*3) ,rep('s3_3_veggies', 13*3),
+    c(rep('s3_1_kitchenware', 13*3), rep('s6_1_colors', 13*6),rep('s3_2_sports', 13*3) ,rep('s3_3_veggies', 13*3),
       rep('s6_2_shapes', 13*6),rep('s3_4_rooms', 13*3),rep('s6_3_plants', 13*6),rep('s6_4_fruits', 13*6),
-      rep('s3_5_landscapes', 13*3), rep('s3_6_animals', 13*3),rep('s6_5_tools', 13*6),rep('s3_7_vehicles', 13*3),rep('s6_6_instruments', 13*6),
+      rep('s3_5_places', 13*3), rep('s3_6_animals', 13*3),rep('s6_5_tools', 13*6),rep('s3_7_vehicles', 13*3),rep('s6_6_instruments', 13*6),
       rep('s3_8_clothes', 13*3)
-    ), length(unique(wmodata$subject))) 
+    ), length(unique(wmodata$subject))),
+    condition= rep(
+    c(rep('s3', 13*3), rep('s6', 13*6),rep('s3', 13*3) ,rep('s3', 13*3),
+      rep('s6', 13*6),rep('s3', 13*3),rep('s6', 13*6),rep('s6', 13*6),
+      rep('s3', 13*3), rep('s3', 13*3),rep('s6', 13*6),rep('s3', 13*3),rep('s6', 13*6),
+      rep('s3', 13*3)
+    ), length(unique(wmodata$subject))),
+    'category' = rep(
+    c(rep('Kitchenware', 13*3), rep('Colors', 13*6),rep('Sports', 13*3) ,rep('Vegetables', 13*3),
+      rep('Shapes', 13*6),rep('Rooms', 13*3),rep('Plants', 13*6),rep('Fruit', 13*6),
+      rep('Places', 13*3), rep('Animals', 13*3),rep('Tools', 13*6),rep('Vehicles', 13*3),rep('Instruments', 13*6),
+      rep('Clothing', 13*3)
+    ), length(unique(wmodata$subject)))
     
   ) %>% 
   arrange(subject, block, seq) %>% 
@@ -83,23 +105,22 @@ wmo.mod <-
   
 wmo.mod %>% 
  # filter(subject<1620) %>% 
-group_by( subject, block, iteration) %>% 
+group_by( block, category, iteration, condition) %>% 
   summarize(mean=mean(acc), 
             se=sd(acc)/sqrt(length(acc))) %>%
 
-  ggplot(aes(x=iteration, y=mean, group=iteration)) +
- geom_boxplot()+
-   #geom_point() +
-# geom_smooth(method  = 'lm',formula = 'y~poly(x,2)', se=F)+
- # geom_line() +
- # geom_errorbar(aes(ymin=mean-se, ymax=mean+se), width=.35, size=1)+
+  ggplot(aes(x=iteration, y=mean, group=block, color=block)) +
+# geom_boxplot()+
+  geom_point() +
+ #geom_smooth(method  = 'lm',formula = 'y~poly(x,2)', se=F)+
+  geom_line() +
+  geom_errorbar(aes(ymin=mean-se, ymax=mean+se), width=.35, size=1)+
  ylim(c(0, 1.))+
-  #facet_wrap(vars(subject)) +
-  facet_wrap(vars(block 
-                  )
-             )+
-  theme_pubclean(base_size = 20) +
-theme(legend.position = 'none')
+  facet_wrap(vars(condition)) +
+  viridis::scale_color_viridis(discrete = TRUE, option = 'D')+
+  #facet_wrap(vars(block))+
+#theme(legend.position = 'none')+
+theme_classic(base_size = 20) 
   
 
 # 
@@ -107,151 +128,67 @@ theme(legend.position = 'none')
 #                       length(unique(wmodata$subject)))
 ```
  
- 
-This block performs the learning/accuracy curve: acc by item iteration
-```{r, echo=FALSE}
-i=1
-mean.acc.3 <- c()
-mean.acc.6 <- c() 
-wmo.s <- c()
+```{r correlation with Naming frequency}
 
-#iterate through each subject here:
-for (s in Subjects) {
-OneSub <- wmodata$subject==s  
-if(any(OneSub)){
+acc_freq_dat= 
+  wmo.mod %>% 
+ filter(iteration>5 & iteration <13) %>% 
+group_by(block, category, iteration) %>% 
+  summarize(m.acc=mean(acc), 
+            se=sd(acc)/sqrt(length(acc))) %>% 
+  ungroup %>% 
+  inner_join(optimalresp_freq, by='category') %>% 
+  group_by(block, category) %>% 
+  summarise(mean.prop = mean(proportion), 
+            mean.acc=mean(m.acc)) %>% 
+  ungroup()
 
-#rehsape script here: this reshapes response vector in to trial x block
-#use these to find the trials
-temp.sort.3 <- reshape(as.matrix(wmodata$seq[OneSub & ns3]),39,ns3.blks)
-temp.sort.6 <- reshape(as.matrix(wmodata$seq[OneSub & ns6]),78,ns6.blks)
-#these are the actual data. 
-temp.dat.3 <- reshape(as.matrix(wmodata$acc[OneSub & ns3]),39,ns3.blks)
-temp.dat.6 <- reshape(as.matrix(wmodata$acc[OneSub & ns6]),78,ns6.blks)
-#iterate through blocks here:
-temp.cat.3 <- c()
-temp.cat.6 <- c()
+  acc_freq_dat %$% cor.test(mean.prop, mean.acc, method = 'pearson') %>% 
+    broom::tidy() %>% 
+    knitr::kable()
 
-for (n in 1:ns3.blks) {
-  #iterate through items here
- #temp.cat.3<- cbind(temp.cat.3,reshape(as.matrix(sort(temp.sort.3[,n])),13,3)) #accumulates across blocks
- 
-  temp.cat.3<-cbind(temp.cat.3,cbind(as.matrix(temp.dat.3[temp.sort.3[,n]==1,n][1:12]),
-                                     as.matrix(temp.dat.3[temp.sort.3[,n]==2,n][1:12]),
-                                      as.matrix(temp.dat.3[temp.sort.3[,n]==3,n][1:12])
-                                     )
-                    )
-   if(TRUE){ 
-     if (n <= ns6.blks) {
-          temp.cat.6<-cbind(temp.cat.6,cbind(as.matrix(temp.dat.6[temp.sort.6[,n]==1,n][1:12]),
-                                      as.matrix(temp.dat.6[temp.sort.6[,n]==2,n][1:12]),
-                                      as.matrix(temp.dat.6[temp.sort.6[,n]==3,n][1:12]),
-                                      as.matrix(temp.dat.6[temp.sort.6[,n]==4,n][1:12]),
-                                      as.matrix(temp.dat.6[temp.sort.6[,n]==5,n][1:12]),
-                                      as.matrix(temp.dat.6[temp.sort.6[,n]==6,n][1:12])
-                                     )
-          )
-          }
-     }
- 
-} 
-#clean missing values -1 
-temp.cat.6[temp.cat.6==-1]=0
-temp.cat.3[temp.cat.3==-1]=0
-#save subject
-wmo.s[i] <- s
-i = i+ 1
-
- mean.acc.3 <-cbind(mean.acc.3,rowMeans(temp.cat.3,na.rm = FALSE)) # accumulates across subjects
- mean.acc.6 <-cbind(mean.acc.6,rowMeans(temp.cat.6,na.rm = TRUE))
- #print(length(rowMeans(temp.cat.6,na.rm = TRUE)))
- plot(rowMeans(temp.cat.3),ylim = c(0,1),col = 'green4',
-      cex=1,lwd=2,pch=19, xlab ='Stimulus Iteration number',
-      ylab ='Accuracy', main = s)
-lines(rowMeans(temp.cat.3),ylim = c(0,1),col = 'green4',lwd=2)
-points(rowMeans(temp.cat.6),ylim = c(0,1),col = 'orange',pch=19,cex=1,lwd=2)
-lines(rowMeans(temp.cat.6),ylim = c(0,1),col = 'orange',lwd=2)
-legend("bottomright", c("set size 3", "set size 6"),pch = c( 19, 19),
-       text.col =c( "green4","orange"), col = c("green4","orange"))
-}
-else {
-  #use this to track missing data
-  wmo.s <-cbind(wmo.s,s) 
+acc_freq_dat %>% 
+  ggplot(aes(x=mean.acc, y=mean.prop) ) +
+  geom_point(size=6, alpha=.8, color='orange') +
+  geom_smooth(method = 'lm', color='red', alpha=.2) +
+  geom_text(aes(label=block), check_overlap = T, nudge_y = .01) +
+  xlab('Learning accuracy')+
+  ylab('Optimal name proportion')+
+  theme_classic(base_size = 18) 
+ # coord_cartesian(xlim = c(0.3, 1), ylim = c(0.3, 1))
+  #,coord_equal()
   
-mean.acc.3 <-cbind(mean.acc.3,rep(NA,12)) # accumulates across subjects
-mean.acc.6 <-cbind(mean.acc.6,rep(NA,12))
-}
-}
-# set size 3 vs set size 6 performance indicator: subtract the two and take the average for each iteration point. A negative number indicates better performance, overall in set size 6, no difference if close to zero
-wmo.learn.score <- colMeans(mean.acc.3-mean.acc.6)
-
+  
 ```
 
-```{r}
+```{r correlation with Naming response variability}
+acc_variability_dat= 
+  wmo.mod %>% 
+ # filter(subject<1620) %>% 
+group_by(block, category, iteration) %>% 
+  summarize(m.acc=mean(acc), 
+            se=sd(acc)/sqrt(length(acc))) %>% 
+  ungroup %>% 
+  inner_join(response_diversity, by='category') %>% 
+  group_by(block, category) %>% 
+  summarise(mean.unique = mean(resp_unique), 
+            mean.acc=mean(m.acc)) %>% 
+  ungroup()
 
-#fit curves
-wmons3<- data.frame("Y"=rowMeans(mean.acc.3,na.rm = TRUE),"x"=1:12)
-wmons6<- data.frame("Y"=rowMeans(mean.acc.6,na.rm = TRUE),"x"=1:12)
+  acc_variability_dat %$% cor.test(mean.unique, mean.acc, method = 'pearson') %>% 
+    broom::tidy() %>% 
+     knitr::kable()
 
-#wmo.lin.fit<- lm(Y~ x,data = wmoTesting)
-wmo.poly.fit.n3<- lm(Y~ poly(x,3),data = wmons3)
-wmo.poly.fit.n6<- lm(Y~ poly(x,3),data = wmons6)
 
-#Plot group means and curves
- plot(rowMeans(mean.acc.3,na.rm = TRUE),ylim = c(0,1),col = 'green4',
-      cex=1,lwd=2,pch=19, xlab ='Stimulus Iteration number',
-      ylab ='Accuracy' ,main = 'Group Means')
- #lines(rowMeans(mean.acc.3),ylim = c(0,1),col = 'green4',lwd=2)
-points(rowMeans(mean.acc.6),ylim = c(0,1),col = 'orange',pch=19,cex=1,lwd=2)
-#lines(rowMeans(mean.acc.6),ylim = c(0,1),col = 'orange',lwd=2)
-legend("bottomright", c("set size 3", "set size 6"),pch = c( 19, 19),
-       text.col =c( "green4","orange"), col = c("green4","orange"))
-
-lines(wmons3$x,wmo.poly.fit.n3$fitted.values,lwd=2.3, col = 'green')
-lines(wmons6$x,wmo.poly.fit.n6$fitted.values,lwd=2.3, col = 'red')
-
-#abline(reg = wmo.lin.fit)
-
-#draw error bars
-#arrows(1:12, avg-sdev, x, avg+sdev, length=0.05, angle=90, code=3)
+acc_variability_dat %>% 
+  ggplot(aes(x=mean.acc, y=mean.unique) ) +
+  geom_point(size=6, alpha=.4, color='orange') +
+  geom_smooth(method = 'lm', alpha=.2, color='red') +
+  geom_text(aes(label=block), check_overlap = T, nudge_y = .01) +
+  theme_classic(base_size = 18) 
+ # coord_cartesian(xlim = c(0.3, 1), ylim = c(0.3, 1))
+  #,coord_equal()
+  
 ```
-
-Plot group performance on learning and test: box plots.
-```{r}
-#compute accuracy in testing
-ns3.test.mean <- c()
-ns6.test.mean <- c()
-i = 1
-for (s in Subjects) {
-  OneSub <- wmotestdata$subject==s  
-  ns3.test.mean[i] <- mean(wmotestdata[!is.na(match(wmotestdata[,"stim"],block.3)) & OneSub,"acc"])
-  ns6.test.mean[i] <- mean(wmotestdata[!is.na(match(wmotestdata[,"stim"],block.6)) & OneSub,"acc"])
-
-  i = i + 1
-}
-TestData=data.frame  (ns3.test.mean,ns6.test.mean)
-#plot
-TestData
-
-#ggplot(data = TestData, aes(y= TestData)) + geom_boxplot()
-```
-
-```{r Learn_metric}
-ns3.learn <- colMeans(mean.acc.3[6:12, ])
-ns6.learn <- colMeans(mean.acc.6[6:12, ])
-
-learn_metric <- (ns3.learn - ns3.test.mean) - (ns6.learn - ns6.test.mean)
-
-```
-
-```{r saveData}
-RLWM_data <-  data.frame("subject" = wmo.s,
-                         "train_3_acc" = colMeans(mean.acc.3),
-                         "train_6_acc" = colMeans(mean.acc.6),
-                         "test_3_acc"  = ns3.test.mean,
-                         "test_6_acc"  = ns6.test.mean,
-                         "learnDiff"   = wmo.learn.score 
-  )
-write.csv(RLWM_data, "./processed/RLWM_results_winter_subjects.csv")
-```
-Correlation with test for ns6
-For a person with a large WM capacity- ns6 curve will be driven up early (higher accuracy at eariler iterations), smaller difference in areas between the two curves, and according to Collins, a negative correlation between accuracy on ns6 test and AUC of ns6 training. 
+ 
+ 
